--- a/example/src/main/res/layout/activity_fragment_container.xml
+++ b/example/src/main/res/layout/activity_fragment_container.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.woodblockwithoutco.beretained.MainActivity">
+    tools:context=".MainActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -25,5 +25,5 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="com.woodblockwithoutco.beretained.MainActivity"/>
+        tools:context=".MainActivity"/>
 </RelativeLayout>
