Updated example to include non-support Activity

--- a/example/src/main/res/menu/menu_main_activity.xml
+++ b/example/src/main/res/menu/menu_main_activity.xml
@@ -2,4 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/open_sub_main_activity"
           android:title="@string/open_sub_main_activity"/>
+    <item android:id="@+id/open_non_support_activity"
+          android:title="@string/open_non_support_activity"/>
 </menu>
